// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders components/tag/demo/animation.tsx extend context correctly 1`] = `
Array [
  <div
    style="display: flex; align-items: center; flex-wrap: wrap; gap: 8px; margin-bottom: 8px;"
  >
    <span
      class="ant-tag ant-tag-filled css-var-test-id"
    >
      Tag 1
      <span
        aria-label="Close"
        class="anticon anticon-close ant-tag-close-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tag ant-tag-filled css-var-test-id"
    >
      Tag 2
      <span
        aria-label="Close"
        class="anticon anticon-close ant-tag-close-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tag ant-tag-filled css-var-test-id"
    >
      Tag 3
      <span
        aria-label="Close"
        class="anticon anticon-close ant-tag-close-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <span
    class="ant-tag ant-tag-filled css-var-test-id"
    style="background: rgb(255, 255, 255); border-style: dashed;"
  >
    <span
      aria-label="plus"
      class="anticon anticon-plus"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
        />
        <path
          d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
        />
      </svg>
    </span>
     New Tag
  </span>,
]
`;

exports[`renders components/tag/demo/animation.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tag/demo/checkable.tsx extend context correctly 1`] = `
<form
  class="ant-form ant-form-horizontal css-var-test-id ant-form-css-var"
>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-col-6 ant-form-item-label css-var-test-id"
      >
        <label
          class=""
          title="Checkable"
        >
          Checkable
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <span
              class="ant-tag ant-tag-checkable ant-tag-checkable-checked css-var-test-id"
            >
              <span>
                Yes
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-col-6 ant-form-item-label css-var-test-id"
      >
        <label
          class=""
          title="Single"
        >
          Single
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-tag-checkable-group css-var-test-id"
            >
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Movies
                </span>
              </span>
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-checked ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Books
                </span>
              </span>
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Music
                </span>
              </span>
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Sports
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-col-6 ant-form-item-label css-var-test-id"
      >
        <label
          class=""
          title="Multiple"
        >
          Multiple
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-tag-checkable-group css-var-test-id"
            >
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-checked ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Movies
                </span>
              </span>
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Books
                </span>
              </span>
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-checked ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Music
                </span>
              </span>
              <span
                class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
              >
                <span>
                  Sports
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders components/tag/demo/checkable.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tag/demo/customize.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap ant-flex-align-center ant-flex-gap-small"
>
  <span
    class="ant-tag ant-tag-filled css-var-test-id"
  >
    Tag1
    <span
      aria-label="Close"
      class="ant-tag-close-icon"
    >
      关 闭
    </span>
  </span>
  <span
    class="ant-tag ant-tag-filled css-var-test-id"
  >
    Tag2
    <span
      aria-label="Close"
      class="anticon anticon-close-circle ant-tag-close-icon"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders components/tag/demo/customize.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tag/demo/draggable.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-flex ant-flex-wrap-wrap"
    style="gap: 4px 0;"
  >
    <span
      class="ant-tag"
      style="cursor: move; transition: unset;"
    >
      Tag 1
    </span>
    <span
      class="ant-tag"
      style="cursor: move; transition: unset;"
    >
      Tag 2
    </span>
    <span
      class="ant-tag"
      style="cursor: move; transition: unset;"
    >
      Tag 3
    </span>
  </div>,
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  >
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  </div>,
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />,
]
`;

exports[`renders components/tag/demo/draggable.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tag/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large css-var-test-id"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-gap-medium"
    >
      <span
        class="ant-tag acss-1cdgefp ant-tag-filled css-var-test-id"
        style="background-color: rgb(230, 247, 255);"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
          style="color: rgb(82, 196, 26);"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
        <span
          style="color: rgb(38, 38, 38);"
        >
          Object
        </span>
      </span>
      <span
        class="ant-tag acss-1cdgefp ant-tag-filled css-var-test-id"
        style="background-color: rgb(245, 239, 255);"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
          style="color: rgb(143, 135, 241);"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
            />
          </svg>
        </span>
        <span
          style="color: rgb(143, 135, 241);"
        >
          Function
        </span>
      </span>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-gap-medium ant-flex-vertical"
    >
      <div
        class="ant-tag-checkable-group css-var-test-id acss-1cdgefp"
        style="gap: 12px; padding: 8px 12px; background-color: rgba(82, 196, 26, 0.08); border-radius: 8px;"
      >
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
          style="background-color: rgba(82, 196, 26, 0.1); border-color: rgba(82, 196, 26, 0.3); color: rgb(82, 196, 26);"
        >
          <span>
            React
          </span>
        </span>
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
          style="background-color: rgba(82, 196, 26, 0.1); border-color: rgba(82, 196, 26, 0.3); color: rgb(82, 196, 26);"
        >
          <span>
            Vue
          </span>
        </span>
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
          style="background-color: rgba(82, 196, 26, 0.1); border-color: rgba(82, 196, 26, 0.3); color: rgb(82, 196, 26);"
        >
          <span>
            Angular
          </span>
        </span>
      </div>
      <div
        class="ant-tag-checkable-group css-var-test-id acss-1cdgefp"
        style="gap: 16px; padding: 8px 12px; background-color: rgba(143, 135, 241, 0.08); border-radius: 8px;"
      >
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
          style="background-color: rgba(143, 135, 241, 0.1); border-color: rgba(143, 135, 241, 0.3); color: rgb(143, 135, 241); font-weight: 500;"
        >
          <span>
            meet-student
          </span>
        </span>
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-group-item css-var-test-id"
          style="background-color: rgba(143, 135, 241, 0.1); border-color: rgba(143, 135, 241, 0.3); color: rgb(143, 135, 241); font-weight: 500;"
        >
          <span>
            thinkasany
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tag/demo/style-class.tsx extend context correctly 2`] = `[]`;
